Don't analyze test files

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"test": "phpunit",
 		"lint": "phpcs -p --standard=WordPress src/",
 		"analyze": [
-			"phpmd --suffixes php --exclude vendor/ ./ ansi phpmd.xml",
+			"phpmd --suffixes php src/ ansi phpmd.xml",
 			"phan --output-mode text --no-progress-bar --color --allow-polyfill-parser"
 		]
 	},
